--- a/app/views/staff/reservations/show.html.erb
+++ b/app/views/staff/reservations/show.html.erb
@@ -1,25 +1,39 @@
-<div class="container">
-  <div class="card p-3">
-    <h5>ID: <%= @reservation.id %></h5>
-    <h5>Room Number: <%= @reservation.room_number %></h5>
-    <h5>Guest: <%= @reservation.user.first_name %> <%= @reservation.user.last_name %></h5>
+<div class="container mt-3">
+  <div class="logo-container">
+    <%= image_tag 'logo.png', class: 'logo-sm' %>
   </div>
-</div>
+  <div class="container-fluid px-0">
+    <h1 class="font-green mb-0"><%= @reservation.user.first_name %>'s Room</h1>
+    <%= image_tag("icons/arrow-down.svg", height:25) %>
+    <%= image_tag("icons/arrow-down.svg", height:25) %>
+    <%= image_tag("icons/arrow-down.svg", height:25) %>
+    <%= image_tag("icons/arrow-down.svg", height:25) %>
+    <%= image_tag("icons/arrow-down.svg", height:25) %>
 
-<div class="container p-3" style="background-color: beige;">
-  <h5>Requests / Time requests:</h5>
-  <% @all_requests.each do |request| %>
-    <% if request.class == TimeRequest %>
-      <div class="card w-75 p-3 mb-3">
-        <h6>Time Request: </h6>
-        <p><%= request.time %></p>
-      </div>
-    <% else %>
-      <div class="card w-75 p-3 mb-3">
-        <h6>Amenity Request:</h6>
-        <p><%= request.hotel_amenity %></p>
-      </div>
-    <% end %>
-  <% end %>
+    <% room_type = (@reservation.room_number % 10).to_s %>
+    <%= image_tag("room_#{room_type + (@reservation.room_number == 101 ? 'a' : '')}.jpg", class: "w-100 mt-1")  %>
 
-  <%= render 'shared/chat', reservation: @reservation, message: @message %>
+  <ul class="d-flex justify-content-around nav nav-pills nav-fill mb-3 mt-3 button-selected" id="pills-tab" role="tablist">
+    <li class="nav-item mr-2" role="presentation">
+      <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Request</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Chat</a>
+    </li>
+    <li class="nav-item ml-2" role="presentation">
+      <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Details</a>
+    </li>
+  </ul>
+
+    <div class="tab-content" id="pills-tabContent">
+    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+      <%= render 'detail_overview', reservation: @reservation %>
+    </div>
+    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+      <%= render 'shared/chat', reservation: @reservation, message: @message %>
+    </div>
+    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+      <%= render 'detail_overview', reservation: @reservation %>
+    </div>
+  </div>
+ </div>
