--- a/app/views/staff/reservations/show.html.erb
+++ b/app/views/staff/reservations/show.html.erb
@@ -8,18 +8,39 @@
   </div>
 </div>
 
+<%# Container for Requests / Time Requests, ordered by :updated_at (i think) %>
 <div class="container p-3" style="background-color: beige;">
   <h5>Requests / Time requests:</h5>
   <% @all_requests.each do |request| %>
+    <%# If it's a TIME request, this is displayed: %>
     <% if request.class == TimeRequest %>
-      <div class="card w-75 p-3 mb-3">
+      <%# Red border for if the card is on hold (styling is up to your disgression) %>
+      <div class="card w-75 p-3 mb-3" style="<%= 'border: 2px solid red;' if request.status == 'hold' %>">
         <h6>Time Request: </h6>
-        <p><%= request.time %></p>
-        <%= request.status %>
 
+        <%# If request is check-in, displays "early check in" otherwise "late check out" %>
+        <small><p class="mb-0"><%= request.check_in ? 'Early Check-In:' : 'Late Check-Out:' %></p></small>
+        
+        <%# Checks if a request is a check-in request: If so, displays check-in date. %>
+        <% if request.check_in %>
+          <p>
+            <%= @reservation.check_in_date.strftime("%b #{@reservation.check_in_date.day.ordinalize}")%>
+            <small><%= @reservation.check_in_date.strftime("(%a)")%></small>
+            <%= request.time.strftime("%l:%M %p") %>
+          </p>
+        <% else %>
+          <p>
+            <%= @reservation.check_out_date.strftime("%b #{@reservation.check_out_date.day.ordinalize}")%>
+            <small><%= @reservation.check_out_date.strftime("(%a)")%></small>
+            <%= request.time.strftime("%l:%M %p") %>
+          </p>
+        <% end %>
+
+        <%# BUTTONS: If a request is 'pending/hold', usable buttons are displayed. If 'accepted/declined', they are disabled. %>
         <% if request.status == "pending" || request.status == "hold" %>
 
           <div class="d-flex w-100">
+            <%# button for accepting a request. Updates both reservation & request. %>
             <%= form_for request, url: reservation_time_request_path(@reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
               <%= f.hidden_field :status, value: 'accepted' %>
                 <% if request.check_in == true %>
@@ -33,13 +54,15 @@
                 <% end %>
               <%= f.submit 'Accept', class: 'btn btn-success flex-grow-1' %>
             <% end %>
-
+            
+            <%# time request decline button %>
             <%= form_for request, url: reservation_time_request_path(@reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
               <%= f.hidden_field :status, value: 'declined' %>
               <%= f.submit 'Decline', class: 'btn btn-primary flex-grow-1' %>
             <% end %>
 
-            <% unless request.status == "pending" %>
+            <%# time request hold button: Disappears after you've clicked "hold" %>
+            <% unless request.status == "hold" %>
               <%= form_for request, url: reservation_time_request_path(@reservation, request), method: :patch, html: { style: "flex-grow: 1; display: flex;" } do |f| %>
                 <%= f.hidden_field :status, value: 'hold' %>
                 <%= f.submit 'Hold', class: 'btn btn-secondary flex-grow-1' %>
@@ -48,6 +71,8 @@
           </div>
 
         <% else %>
+
+          <%# Displays a Disabled button once a choice is made (time request is 'accepted/declined') %>
           <div class="w-100 text-align-center btn disabled btn-<%= request.status == 'accepted' ? 'success' : 'primary' %>">
             <%= request.status == 'accepted' ? 'Accepted' : 'Declined' %>
           </div>
@@ -57,6 +82,7 @@
 
     <% else %>
 
+      <%# If it's an AMENITY request, this is displayed: %>
       <div class="card w-75 p-3 mb-3">
         <h6>Amenity Request:</h6>
         <p><%= request.hotel_amenity %></p>
