index page cleaned up

--- a/app/views/staff/reservations/index.html.erb
+++ b/app/views/staff/reservations/index.html.erb
@@ -1,13 +1,12 @@
-<div class="container">
-  <% @reservations_with_event.each do |reservation| %>
-    <div class="card w-100 p-3 mb-3">
-      <h5>Index: <%= link_to "#{reservation.first.id}", staff_reservation_path(reservation.first) %></h5>
-      <h5>Guest:</h5>
-      <p><%= "#{reservation.first.user.first_name.capitalize} #{reservation.first.user.last_name.capitalize}"%></p>
-      <h5>First Night:</h5>
-      <p><%= reservation.first.check_in_date.strftime("%b #{reservation.first.check_in_date.day.ordinalize}") %></p>
-      <p>Updated at: <%= reservation.first.updated_at %></p>
-    </div>
+<div class="container-fluid py-3">
+  <h1>Say Hello</h1>
+  <% @reservations_with_event.each do |reservation, latest_event| %>
+    <%= link_to staff_reservation_path(reservation) do %>
+      <div class="card w-100 p-3 mb-2 d-flex">
+        <h3><%= "#{reservation.user.first_name.capitalize} #{reservation.user.last_name.capitalize}" %></h3>
+        <p><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}") %></p>
+      </div>
+    <% end %>
   <% end %>
 </div>
 
