--- a/app/views/staff/reservations/_requests.html.erb
+++ b/app/views/staff/reservations/_requests.html.erb
@@ -1,5 +1,5 @@
 <%# Container for Requests / Time Requests, ordered by :updated_at (i think) %>
-<div class="container p-3" style="background-color: beige;">
+<div class="container p-3">
   <h5>Requests / Time requests:</h5>
   <% all_requests.each do |request| %>
     <%# If it's a TIME request, this is displayed: %>
