--- a/app/assets/stylesheets/components/_request_card.scss
+++ b/app/assets/stylesheets/components/_request_card.scss
@@ -3,6 +3,7 @@
   border-radius: 5px;
   width: 100%;
   margin-bottom: 8px;
+  box-shadow: 0 8px 6px -6px grey;
 }
 
 .request-card-content {
@@ -10,7 +11,6 @@
   flex-direction: column;
   width: 100%;
   padding: 8px 16px 0 16px;
-  // padding-bottom: 0;
 }
 
 .request-card-date {
