--- a/app/views/staff/reservations/_detail_overview.html.erb
+++ b/app/views/staff/reservations/_detail_overview.html.erb
@@ -25,7 +25,7 @@
     <p class="font-bright-pink mb-0">Group Size: </p>
     <p class="mb-0"> <%= reservation.number_of_guests %></p>
     <p class="font-bright-pink mb-0">Channel: </p>
-    <p class="mb-0"> <%= reservation.number_of_guests %></p>
+    <p class="mb-0"> <%= reservation.channel %></p>
     <p class="font-bright-pink mb-0">Reservation Number: </p>
     <p class="mb-0"> <%= reservation.reservation_number %></p>
   </div>
