Fixed show page

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -35,3 +35,9 @@
   display: flex;
   margin-bottom: 5px;
 }
+
+.container-flex-amenities {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
