--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -41,4 +41,4 @@
   </div>
  </div>
 
-  <%= render 'change_times', reservation: @reservation %>
+  <%#= render 'change_times', reservation: @reservation %>
