--- a/app/views/reservations/_reservation_overview.html.erb
+++ b/app/views/reservations/_reservation_overview.html.erb
@@ -2,18 +2,19 @@
   <div class="card-show-page card-reservation-time d-flex">
     <div class="border-right pr-0" style="flex: 0 0 50%">
       <p class="font-bright-pink mb-0">Check in: </p>
-      <p class="mb-0" style="font-size: 3vh"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
+      <p class="mb-0" style="font-size: 2.5vh"><%= reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")%> <small><%= reservation.check_in_date.strftime("(%a)")%></small></p>
       <p class="m-0" style="font-size: 3vh"><%= (reservation.arrival_time + 9.hours).strftime("%l:%M%p~") %></p>
     </div>
 
     <div class="ml-3" style="flex: 0 0 50%">
       <p class="font-bright-pink mb-0">Check out: </p>
-      <p class="m-0" style="font-size: 3vh"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
+      <p class="m-0" style="font-size: 2.5vh"><%= reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")%> <small><%= reservation.check_out_date.strftime("(%a)")%></small></p>
       <p class="m-0" style="font-size: 3vh" ><%= reservation.check_out_date.strftime("~#{(reservation.departure_time + 9.hours).strftime("%l:%M%p")}") %></p>
     </div>
   </div>
 
-  <button type="button" class="btn btn-primary button-full-width mt-1 mb-1">Change Check-In/Out Time</button>
+  <a data-toggle="collapse" href="#time-request" class="btn btn-primary button-full-width mt-1 mb-1">Change Check-In/Out Time</a>
+  <div class="collapse" id='time-request'> <%= render 'change_times', reservation: @reservation %> </div>
 
   <div class="card-show-page mt-3">
     <p class="font-bright-pink mb-0">Address:</p>
@@ -35,18 +36,20 @@
 
   <div class="card-show-page mt-3 pb-3">
     <p class="font-bright-pink mb-2">Amenities </p>
-    <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Essentials"), style: "color: white;" do %>
-      <button class="btn btn-primary mb-1" style="width:150px"> <%= image_tag "icons/towels_&_linens.svg", height:50, class:"icon-white" %><br>Essentials</button>
-    <% end %>
-    <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Bed & Bath"), style: "color: white;" do %>
-    <button class="btn btn-primary mb-1" style="width:150px"><%= image_tag "icons/washer.svg", height:50, class:"icon-white" %> <br> Bed and Bath</button>
-    <% end %>
-    <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Kitchen"), style: "color: white;" do %>
-    <button class="btn btn-primary mb-1" style="width:150px"><%= image_tag "icons/pots_&_pans.svg", height:50, class:"icon-white" %> <br> Kitchen</button>
-    <% end %>
-    <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Other"), style: "color: white;" do %>
-    <button class="btn btn-primary mb-1" style="width:150px"><%= image_tag "icons/phone-charging-3.svg", height:50, class:"icon-white" %> <br>Others</button>
-    <% end %>
+    <div class="container-flex-amenities">
+      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Essentials"), style: "color: white;" do %>
+        <button class="btn btn-primary mb-1" style="width:150px"> <%= image_tag "icons/towels_&_linens.svg", height:50, class:"icon-white" %><br>Essentials</button>
+      <% end %>
+      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Bed & Bath"), style: "color: white;" do %>
+      <button class="btn btn-primary mb-1" style="width:150px"><%= image_tag "icons/washer.svg", height:50, class:"icon-white" %> <br> Bed and Bath</button>
+      <% end %>
+      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Kitchen"), style: "color: white;" do %>
+      <button class="btn btn-primary mb-1" style="width:150px"><%= image_tag "icons/pots_&_pans.svg", height:50, class:"icon-white" %> <br> Kitchen</button>
+      <% end %>
+      <%= link_to reservation_hotel_amenities_path(@reservation, :category => "Other"), style: "color: white;" do %>
+      <button class="btn btn-primary mb-1" style="width:150px"><%= image_tag "icons/phone_charger.svg", height:50, class:"icon-white" %> <br>Others</button>
+      <% end %>
+    </div>
   </div>
   <button class="btn btn-success button-full-width mt-3"><%= image_tag "icons/chat.svg", height:30, class:"icon-white mr-2" %>Chat with L</button>
 </div>
