--- a/app/views/staff/reservations/_detail_overview.html.erb
+++ b/app/views/staff/reservations/_detail_overview.html.erb
@@ -1,4 +1,4 @@
-<div class="font-grey">
+<div class="font-grey mb-3">
   <div class="card-show-page card-reservation-time d-flex">
     <div class="border-right pr-0" style="flex: 0 0 50%">
       <p class="font-bright-pink mb-0">Check in: </p>
