--- a/app/views/staff/reservations/index.html.erb
+++ b/app/views/staff/reservations/index.html.erb
@@ -1,23 +1,31 @@
 <div class="container-fluid py-3">
-  <h1>Say Hello</h1>
+  <h1 class="font-green">Say Hello to...</h1>
   <% @reservations_with_event.each do |reservation, latest_event| %>
+
+    <%# Checks if a reservation is current past or upcoming. %>
+    <% if Date.today.between?(reservation.check_in_date, reservation.check_out_date)%>
+      <% now = 'Current' %>
+    <% elsif reservation.check_out_date < Date.today %>
+      <% now = 'Past' %>
+    <% else %>
+      <% now = 'Upcoming' %>
+    <% end %>
+
     <%= link_to staff_reservation_path(reservation) do %>
-      <div class="card w-100 py-2 px-2 mb-2 d-flex flex-row align-items-center justify-content-center">
-        <h5 class="mb-0 mr-3 font-green" style="flex-basis: 40%;"><%= "#{reservation.user.first_name.capitalize} #{reservation.user.last_name.capitalize}" %></h5>
+      <div class="staff-reservation-card">
+        <h5 class="mb-0 mr-3 pl-2 font-green" style="flex-basis: 40%;"><%= "#{reservation.user.first_name.capitalize} #{reservation.user.last_name.capitalize}" %></h5>
         <div class="d-flex flex-column flex-grow-1">
-          <div class="d-flex flex-row justify-content-around">
-            <small><p class="mb-0">Current</p></small>
-            <% if Date.now.between?(reservation.check_in_date, reservation.check_out_date%>
-              <p>CURRENT</p>
-            <% elsif truevalue %>
-            <% else %>
-            <% end %>
+          <div class="d-flex flex-row justify-content-between">
+            <small><p class="mb-0">
+              <%= now %>
+            </p></small>
             <small><p class="mb-0"><%= reservation.hotel.name.gsub('Section L ', '@') %></p></small>
           </div>
-          <p class="mb-0"><%= "#{reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")} - #{reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")}" %></p>
+          <strong>
+            <p class="staff-reservation-card-date"><%= "#{reservation.check_in_date.strftime("%b #{reservation.check_in_date.day.ordinalize}")}  -  #{reservation.check_out_date.strftime("%b #{reservation.check_out_date.day.ordinalize}")}" %></p>
+          </strong>
         </div>
       </div>
     <% end %>
   <% end %>
 </div>
-
