--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/back', path: "reservations_path" %>
 
-<%= render 'shared/chat', reservation: @reservation, message: @message %>
+<%#= render 'shared/chat', reservation: @reservation, message: @message %>
 
 <div class="container mt-3">
   <div class="logo-container">
@@ -18,14 +18,17 @@
     <%= image_tag("room_#{room_type + (@reservation.room_number == 101 ? 'a' : '')}.jpg", class: "w-100 mt-1")  %>
 
   <ul class="d-flex justify-content-around nav nav-pills nav-fill mb-3 mt-3 button-selected" id="pills-tab" role="tablist">
-    <li class="nav-item mr-2" role="presentation">
-      <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Overview</a>
+    <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+      <a class="nav-link active px-1" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Overview</a>
     </li>
-    <li class="nav-item" role="presentation">
-      <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Guides</a>
+    <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+      <a class="nav-link" id="p px-1ills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Guides</a>
     </li>
-    <li class="nav-item ml-2" role="presentation">
-      <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Buddy</a>
+    <li class="nav-item mr-1" style="flex-basis: 23%;" role="presentation">
+      <a class="nav-link" id="p px-1ills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Buddy</a>
+    </li>
+    <li class="nav-item" style="flex-basis: 23%;" role="presentation">
+      <a class="nav-link" id="p px-1ills-chat-tab" data-toggle="pill" href="#pills-chat" role="tab" aria-controls="pills-chat" aria-selected="false">Chat</a>
     </li>
   </ul>
   <div class="tab-content" id="pills-tabContent">
@@ -37,6 +40,9 @@
     </div>
     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
       <%= render 'buddy.html.erb' %>
+    </div>
+    <div class="tab-pane fade d-flex" style="flex-direction: column; height: 100%;" id="pills-chat" role="tabpanel" aria-labelledby="pills-chat-tab">
+      <%= render 'shared/chat.html.erb', reservation: @reservation, message:@message %>
     </div>
   </div>
  </div>
