--- a/app/views/staff/reservations/show.html.erb
+++ b/app/views/staff/reservations/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/back', path: "staff_reservations_path" %>
+
 <div class="container mt-3">
   <div class="logo-container">
     <%= image_tag 'logo.png', class: 'logo-sm' %>
