--- a/app/views/shared/_chat.html.erb
+++ b/app/views/shared/_chat.html.erb
@@ -5,8 +5,10 @@
       <% reservation.messages.each do |message| %>
         <div class="message-container card rounded p-2 mb-1 w-50 <%= 'align-self-end' if message.user == current_user %>" id="message-<%= message.id %>">
           <div class="message-content">
-            <p class="mb-1"><em><small><%= message.user.first_name %></small> - <small><%= message.updated_at.strftime("%a %b %e at %l:%M%p") %></small></em></p>
+            <p class="mb-1"><em><small><%= "#{message.user.first_name} - " %></small> <small><%= (message.updated_at + 9.hours).strftime("%a, %e %b, %I:%M %P") %></small></em></p>
             <p class="mb-1"><%= message.content %></p>
+
+
           </div>
         </div>
       <% end %>
@@ -14,7 +16,7 @@
       <div class="d-none" data-role="message-template" >
         <div class="message-container card p-2 mb-1 w-50" id="id">
           <div class="message-content">
-            <p class="mb-1"><small data-role="message-user"></small><small data-role="message-date"></small></p>
+            <p class="mb-1"><em><small data-role="message-user"></small><small data-role="message-date"></small></em></p>
             <p class="mb-1" data-role="message-text"></p>
           </div>
         </div>
@@ -27,7 +29,7 @@
                                   wrapper: false,
                                   label: false,
                                   input_html: {
-                                    class: 'chat-input'
+                                    class: 'chat-input'                                  
                                   } %>
         <div class="input-group-append">
           <%= form.submit "Send", class: 'btn btn-primary chat-input' %>
@@ -37,3 +39,7 @@
     <% end %>
   </div>
 </div>
+
+<script id="reservation-messages" type="application/json">
+  <%= raw(reservation.messages.to_json) %>
+</script>
